<resources>
    <string name="coding_phrase">JLM2017LinsoumiSe</string>
    <string name="app_name">Porte-A-Porte by FI</string>
    <string name="title_activity_login">Connexion au service</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="error_invalid_email">Adresse e-mail invalide</string>
    <string name="error_unknown_email">Adresse e-mail inconnue</string>
    <string name="error_invalid_password">Mot de passe incorrect</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_field_required">Veuillez remplir ce champ</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_admin">Gestion des militants</string>
    <string name="action_settings">Settings</string>
    <string name="admin">Admin ?</string>
    <string name="ajouter_le_militant">Ajouter le militant</string>
    <string name="email">e-mail</string>
    <string name="dialog_title">Confirmez-vous ?</string>
    <string name="dialog_message">Voulez vous vraiment supprimer :</string>
    <string name="ok">Confirmer</string>
    <string name="cancel">Annuler</string>

    <string name="title_activity_splash_screen">P-a-P JLM2017</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="splash_screen_title">Le Porte-à-Porte Insoumis</string>
    <string name="app_version">Version 1.0 \n Toc toc Mc Fly !</string>

    <!-- Strings in the CheckActivity Activity -->
    <string name="dialog_first_connection">Bienvenue à toi cher Insoumis(e), commence par choisir un pseudo et éventuellement changer ton mot de passe ^^</string>
    <string name="nom_de_rue">Nom de rue</string>
    <string name="ville">Ville</string>
    <string name="bis">Bis</string>
    <string name="gps_use">Remplir avec le GPS \n(précision basse)</string>
    <string name="gps_use_precise">Remplir avec le GPS </string>
    <string name="activer_le_gps">Activer le GPS</string>
    <string name="envoyer">Envoyer</string>
    <string name="attente">En attente du GPS</string>
    <string name="dialog_title_GPS">Sélectionnez la bonne adresse</string>
    <string name="compl_ment_d_adresse">Complément d\'adresse (Optionnel)</string>
    <string name="admin_menu">Admin</string>
    <string name="modifier_mes_donn_es_personnelles">Modifier mes données personnelles</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="num_ro_dans_la_rue">Numéro dans la rue</string>
    <string name="appartement">Appartement ?</string>
    <string name="porte_ouverte">Porte Ouverte ?</string>
    <string name="utile_de_revenir">Utile de revenir ?</string>
    <string name="menu_utilisateur">Menu utilisateur</string>
    <string name="pseudo">Pseudo</string>
    <string name="password">Password</string>
    <string name="sauver">Sauver</string>
    <string name="annuler">Annuler</string>
    <string name="title_activity_test_scroll">TestScrollActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="maj_proches">PROCHES</string>
    <string name="maps_dialog_title">Portes tocquées :</string>
    <string name="selection_title">Sélectionnez la bonne adresse :</string>


</resources>
