<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.jlm2017.pap.AdminActivity">

    <!-- DUMMY TO NOT GET FOCUS ON THE EDITTEXT -->
    <LinearLayout
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/isAdmin"
        android:layout_marginTop="53dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_marginTop="37dp"
            android:id="@+id/emailNewMilitant"
            android:hint="@string/email"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:imeOptions="actionDone"
            android:nextFocusUp="@id/emailNewMilitant"
            android:nextFocusLeft="@id/emailNewMilitant"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:text="@string/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/isAdmin"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/emailLayout"
        android:layout_alignStart="@+id/addUser" />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:background="@drawable/button_shape_default_rounded"
        app:spinning_bar_color="@android:color/black"
        app:spinning_bar_width="4dp"
        app:initialCornerAngle="50dp"
        app:finalCornerAngle="50dp"
        android:textColor="@color/tw__composer_white"
        android:textStyle="bold"
        android:text="@string/ajouter_le_militant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addUser"
        android:padding="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
