<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.jlm2017.pap.Activities.LoginActivity">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                app:srcCompat="@mipmap/logo_orange_bleu"
                android:id="@+id/imageView2"
                android:layout_gravity="center_horizontal"
                android:layout_height="168dp" />
            <!-- DUMMY TO NOT GET FOCUS ON THE EDITTEXT -->
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/dummy_login"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="20dp">
                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:nextFocusUp="@id/email"
                    android:nextFocusLeft="@id/email"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@integer/customImeActionId"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>
            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:background="@drawable/button_shape_default_rounded"
                app:spinning_bar_color="@android:color/black"
                app:spinning_bar_width="4dp"
                app:initialCornerAngle="50dp"
                app:finalCornerAngle="50dp"
                android:id="@+id/email_sign_in_button"
                android:textColor="@color/white"
                android:textStyle="bold"

                android:layout_gravity="center_horizontal"
                android:text="@string/action_sign_in"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:layout_marginTop="30dp"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
